game now functions properly. need some more additions to iron things out.

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,5 +1,5 @@
 html{
-    background-image: url(../images/deathstar.jpg);
+    background-image: url("../images/deathstar.jpg");
     background-size: cover;
 }
 
@@ -17,7 +17,7 @@ img{
 }
 
 p{
-    display: inline;
+    display: block;
 }
 
 
