--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,4 +1,4 @@
-html{
+html {
     background-image: url("../images/deathstar.jpg");
     background-size: cover;
 }
@@ -9,23 +9,17 @@ body {
     width: 50%;
 }
 
-img{
+img {
     width: 100px;
     height: 100px;
     border: solid 2px red;
-    margin: auto;
+    margin-right: 10px;
 }
 
-p{
-    display: block;
+.attackers {
+    display: flex;
 }
 
-
-#obiWanHP,
-#yodaHP,
-#lukeHP,
-#bobaHP,
-#vaderHP,
-#maulHP {
-    margin-left: -40px;
+.enemies {
+    display: flex;
 }
